--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,12 @@
     <title>Insert title here</title>
 </head>
 <body>
+<script src="/js/jquery-1.10.2.min.js"></script>
+
 <p style="color:red">hello world</p>
+<hr>
+<a href="/goAdd">添加</a>
+<br>
 <table>
     <thead>
     <tr>
@@ -19,7 +24,6 @@
     </tbody>
 </table>
 
-<script src="/js/jquery-1.10.2.min.js"></script>
 <script>
     $(function () {
         searchModel();
