--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,9 @@
 
 <p style="color:red">hello world</p>
 <hr>
+<!--页面跳转，指向controller路径，下面两种都可以-->
 <a href="/goAdd">添加</a>
+<a th:href="@{/goAdd}">添加</a>
 <br>
 <table>
     <thead>
